data/derived/sp14/progs/unify/prog4772.ml.out
Characters 359-360:
  | Squared e -> (eval(e,x,y) ** 2)
                                 ^
Error: This expression has type int but an expression was expected of type
         float
